# speckle-test

./: Pipfile  README.md  pyproject.toml  readme.md  speckle.ipynb  speckle.py
examples/: first_example.py
src/speckle/: circles_detect.py  speckle.py
tests/: test_speckle.py
