[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speckle-coolmule0"
version = "0.1"
description = "A speckle pattern generator for DIC (Digital Image Correlation)"
authors = [
  { name = "coolmule0", email = "coolmule0@hotmail.co.uk" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
]
requires-python = ">=3.13"
dependencies = [
  "numpy>=2.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/speckle"]